# hs-core-join

./: README.md  hs-core-join.cabal
lib/Language/: CoreJoin.hs
lib/Language/CoreJoin/RCHAM/: ExplicitProcesses.hs  TreeRewrite.hs  TreeRewriteWithMsgPool.hs  TreeRewriteWithRandom.hs  TreeWalk.hs
lib/Language/CoreJoin/Syntax/: Abstract.hs  Initial.hs  Sugar.hs
lib/Utils/: Transformers.hs
