cabal-version: 3.0

name: hs-core-join
version: 0.1.0.0
synopsis:
homepage:

license:            NONE
author:             Gustavo Bicalho
maintainer:         gusbicalho@gmail.com

library
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost
  hs-source-dirs: lib
  exposed-modules:
    Language.CoreJoin
    Language.CoreJoin.Syntax.Abstract
    Language.CoreJoin.Syntax.Initial
    Language.CoreJoin.Syntax.Sugar
  build-depends:
    base ^>=4.14.3.0,
    containers,
    multiset

test-suite hs-core-join-test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Spec.hs
  build-tool-depends:
    hspec-discover:hspec-discover == 2.*
  build-depends:
    base ^>=4.14.3.0,
    hspec
