cabal-version: 3.0

name: hs-core-join
version: 0.1.0.0
synopsis:
homepage:

license:            NONE
author:             Gustavo Bicalho
maintainer:         gusbicalho@gmail.com

library
  default-language: GHC2021
  hs-source-dirs: lib
  exposed-modules:
    Language.CoreJoin
    Language.CoreJoin.RCHAM.TreeRewrite
    Language.CoreJoin.Syntax.Abstract
    Language.CoreJoin.Syntax.Initial
    Language.CoreJoin.Syntax.Sugar
  other-modules:
    Utils.Transformers
  build-depends:
    base ^>=4.16.0.0,
    containers,
    dlist,
    multiset,
    transformers

test-suite hs-core-join-test
  type: exitcode-stdio-1.0
  default-language: GHC2021
  hs-source-dirs: test
  main-is: Spec.hs
  build-tool-depends:
    hspec-discover:hspec-discover == 2.*
  build-depends:
    base ^>=4.16.0.0,
    hspec
